# spice2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build.sh  build_third_party.sh  configure.sh  main.cpp  target_link_libraries_system.cmake
bench/: CMakeLists.txt  adj_list.cpp  brunel+.cpp  brunel.cpp  connectivity.cpp  generate.cpp  main.cpp
lamodel/: main.cpp  matplot.cpp  matplot.h
samples/: CMakeLists.txt  brunel+.cpp  brunel.cpp  brunel_plus.cpp  external_input.cpp  matplot.cpp  matplot.h  ping_pong.cpp  runsample.sh  sssp.cpp  vogels.cpp
spice/: CMakeLists.txt  adj_list.cpp  adj_list.h  concepts.h  connectivity.cpp  connectivity.h  neuron_pool.h  neuron_population.h  snn.cpp  snn.h  snn_info.h  spice.h  stdint.h  synapse_population.h
spice/detail/: assert.cpp  assert.h  csr.h  neuron_population.h  random.h  range.h  synapse_population.h
spice/include/spice/: concepts.h  connectivity.h  sim_info.h  snn.h  topology.h
spice/include/spice/detail/: csr.h  neuron_population.h  synapse_population.h
spice/include/spice/util/: meta.h  numeric.h  random.h  range.h  scope.h  type_traits.h
spice/src/: connectivity.cpp  snn.cpp  topology.cpp
spice/src/util/: assert.cpp
spice/util/: assert.cpp  assert.h  meta.h  numeric.h  random.h  range.h  stdint.h  type_traits.h
test/: CMakeLists.txt  adj_list.cpp  concepts.cpp  hana.h  main.cpp  neuron_pool.cpp  neuron_population.cpp  snn.cpp  synapse_population.cpp
test/detail/: csr.cpp  neuron_population.cpp  random.cpp  range.cpp  synapse_population.cpp
test/util/: assert.cpp  meta.cpp  numeric.cpp  random.cpp  range.cpp  scope.cpp  stdint.cpp  type_traits.cpp
